method 1 2 4 5 pass